# Python-Bootstrap

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPROVEMENTS.md  LICENSE  MANIFEST.in  README.md  TODO.md  build_and_install.sh  bump_version.sh  main.py  py_bootstrap.sh  pyproject.toml  requirements.txt  uninstall.sh  version.py
New Folder/: Run.sh  py_bootstrap.sh  test.py
PythonBootstraper/: main.py  version.py
PythonBootstraper/templates/: Run V2.sh  Run.sh  py_bootstrap.sh  pybs-completion.bash
dev/: RELEASE_PROCESS.md
docs/: index.html
templates/: Run.sh  py_bootstrap.sh
